--- a/src/assets/scss/components/_faq.scss
+++ b/src/assets/scss/components/_faq.scss
@@ -1,7 +1,3 @@
-:root {
-	interpolate-size: allow-keywords;
-}
-
 .faq {
 	background: linear-gradient(
 		to right,
@@ -12,6 +8,10 @@
 	);
 
 	position: relative;
+
+	.details-inner {
+		padding-top: 20px;
+	}
 
 	.bleed-img {
 		position: absolute;
@@ -41,6 +41,30 @@
 	}
 }
 
+@supports (contain: paint) and (interpolate-size: allow-keywords) {
+	:root {
+		interpolate-size: allow-keywords;
+	}
+
+	details {
+		border-bottom: 1px solid var(--c-teal-darker);
+		padding: 36px 0;
+		overflow: hidden;
+
+		&::details-content {
+			block-size: 0;
+			transition: block-size 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+				content-visibility 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+			transition-behavior: allow-discrete;
+			will-change: block-size;
+		}
+
+		&:open::details-content {
+			block-size: auto;
+		}
+	}
+}
+
 details {
 	border-bottom: 1px solid var(--c-teal-darker);
 	padding: 36px 0;
@@ -50,17 +74,17 @@ details {
    stuff inside the details content */
 
 	// example: https://codepen.io/nikibrown/pen/wBKdbyd
-	&::details-content {
-		block-size: 0;
-		transition: block-size 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94),
-			content-visibility 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-		transition-behavior: allow-discrete;
-		will-change: block-size;
-	}
+	// &::details-content {
+	// 	block-size: 0;
+	// 	transition: block-size 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+	// 		content-visibility 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+	// 	transition-behavior: allow-discrete;
+	// 	will-change: block-size;
+	// }
 
-	&:open::details-content {
-		block-size: auto;
-	}
+	// &:open::details-content {
+	// 	block-size: auto;
+	// }
 
 	&:first-child {
 		padding-top: 0;
@@ -97,7 +121,7 @@ details {
 	}
 
 	&[open] summary {
-		margin-bottom: 20px;
+		//margin-bottom: 20px;
 	}
 
 	&[open] summary::after {
